--- a/mps.html
+++ b/mps.html
@@ -12,7 +12,7 @@
         <div id="img"><img src="../D3/imgs/banner.png"></div>
     </div>
     <div id="sidebar-left">
-        <a href="HOME.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="mps2016.html">Members OF Parliament 2016</a>
         <p><a href="mps2011.html">Members OF Parliament 2011</a></p>
     </div>
