--- a/mps.html
+++ b/mps.html
@@ -9,7 +9,7 @@
 
 <body>
     <div id="header">
-        <div id="img"><img src="../D3/imgs/banner.png"></div>
+        <div id="img"><img src="../D3/banner.png"></div>
     </div>
     <div id="sidebar-left">
         <a href="index.html">Home</a>
